--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.0",
     "@next/font": "13.4.2",
+    "lightbox.js-react": "^0.6.4",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
